--- a/web/paopao/index.html
+++ b/web/paopao/index.html
@@ -10,6 +10,6 @@
 <body>
 <canvas id="paopao"></canvas>
 
-<script src="./paopao.js"></script>
+<script src="https://www.dingjingmaster.top/usr/uploads/resource/paopao.js"></script>
 </body>
 </html>
